packages/next-swc/crates/next-custom-transforms/tests/errors/react-server-components/client-graph/server-only/input.js
// This is a comment.

'use strict'

/**
 * This is a comment.
 */

import 'server-only'

export default function () {
  return null
}
